--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
 		<link href="./_app/immutable/assets/0.DJKnxeJp.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.aRlVTCOR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_SPLOtcJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.IPM-TLH5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DZnwjuVM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BqUl4hIc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dvm-Lq1E.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BlEeHE9C.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DVcP-5_E.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cab7kbiM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CCrIdY5f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C_tAWPrL.js">
@@ -23,15 +23,15 @@
 			
 			<script>
 				{
-					__sveltekit_1ae98k5 = {
+					__sveltekit_2glxuf = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.aRlVTCOR.js"),
-						import("./_app/immutable/entry/app.BlEeHE9C.js")
+						import("./_app/immutable/entry/start.IPM-TLH5.js"),
+						import("./_app/immutable/entry/app.DVcP-5_E.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
