--- a/index.html
+++ b/index.html
@@ -6,32 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
 		<link href="./_app/immutable/assets/0.DJKnxeJp.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BcdphF3E.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C84vJqrG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Be0AUbth.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ddc2s06u.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BqUl4hIc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dvm-Lq1E.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Df2ei7Qp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bbof77M0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cab7kbiM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CCrIdY5f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C_tAWPrL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CfPffSAZ.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Chz-IvXd.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DBAoKXK8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.MrYktfDR.js">
   </head>
   <body data-sveltekit-preload-data="hover" class="bg-gray-50">
     <div style="display: contents"><!--[--><!--[--><!----><div class="mx-auto max-w-6xl p-4"><!----><h1 class="mb-6 text-3xl">Text Sorting Playground</h1> <div class="mb-4 flex gap-4"><textarea rows="20" placeholder="Enter items to be sorted here, one per line" class="grow rounded border bg-white p-2"></textarea> <textarea rows="20" readonly class="grow rounded border bg-white p-2"></textarea></div> <div class="flex items-center"><button class="mr-4 cursor-pointer rounded bg-blue-700 px-3 py-2 text-white">Sort</button> <button class="mr-4 cursor-pointer rounded bg-gray-600 px-3 py-2 text-white">Clear</button> <div class="mr-2">Sorting approach:</div> <select class="rounded border bg-white p-2"><option value="naive">Naïve</option><option value="uca" selected>UCA default</option><option value="ArabicScript">Arabic first</option><option value="ArabicInterleaved">Arabic interleaved</option></select> <button class="ml-auto cursor-pointer rounded bg-green-800 px-3 py-2 text-white">Copy</button></div><!----><!----></div><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_h5v0z8 = {
+					__sveltekit_1m4e38d = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BcdphF3E.js"),
-						import("./_app/immutable/entry/app.Df2ei7Qp.js")
+						import("./_app/immutable/entry/start.Be0AUbth.js"),
+						import("./_app/immutable/entry/app.Bbof77M0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
