--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
     <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
-		<link href="./_app/immutable/assets/0.DJKnxeJp.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BSSmZq1D.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/K6dgI71U.js">
+		<link href="./_app/immutable/assets/0.CANM_HIn.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BUv8lF3O.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/FJOlCIze.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Eaz6O1Ki.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/iodoe4VF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BYRLsaHu.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CjiC4d8N.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DIqHcrBR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUa6Cctz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BMHj-ncZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DA_Hlv19.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BssXyWCA.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2._3tFoqsp.js"><!--[--><meta name="description" content="Try sorting text using different approaches—including mixing the Latin and Arabic scripts"> <meta property="og:type" content="website"> <meta property="og:title" content="Text Sorting Playground"> <meta property="og:url" content="https://www.theobeers.com/allsorts/"> <meta property="og:image" content="https://www.theobeers.com/allsorts/og.jpg"> <meta name="twitter:card" content="summary_large_image"> <meta name="twitter:title" content="Text Sorting Playground"><!--]--><title>Text Sorting Playground</title>
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Dx_EH_ef.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.rIw624Rj.js"><!--[--><meta name="description" content="Try sorting text using different approaches—including mixing the Latin and Arabic scripts"> <meta property="og:type" content="website"> <meta property="og:title" content="Text Sorting Playground"> <meta property="og:url" content="https://www.theobeers.com/allsorts/"> <meta property="og:image" content="https://www.theobeers.com/allsorts/og.jpg"> <meta name="twitter:card" content="summary_large_image"> <meta name="twitter:title" content="Text Sorting Playground"><!--]--><title>Text Sorting Playground</title>
   </head>
   <body data-sveltekit-preload-data="hover" class="bg-gray-50">
-    <div style="display: contents"><!--[--><!--[--><!----><div class="mx-auto max-w-6xl p-4"><!----><h1 class="mb-6 text-3xl">Text Sorting Playground</h1> <div class="mb-4 flex gap-4"><textarea rows="20" placeholder="Enter items to be sorted here, one per line" class="grow rounded border bg-white p-2"></textarea> <textarea rows="20" readonly class="grow rounded border bg-white p-2"></textarea></div> <div class="flex items-center"><button class="mr-4 cursor-pointer rounded bg-blue-700 px-3 py-2 text-white">Sort</button> <button class="mr-4 cursor-pointer rounded bg-gray-600 px-3 py-2 text-white">Clear</button> <div class="mr-2">Sorting approach:</div> <select class="rounded border bg-white p-2"><option value="naive">Naïve</option><option value="uca" selected>UCA default</option><option value="ArabicScript">Arabic first</option><option value="ArabicInterleaved">Arabic interleaved</option></select> <button class="ml-auto cursor-pointer rounded bg-green-800 px-3 py-2 text-white">Copy</button></div><!----><!----></div><!----><!--]--> <!--[!--><!--]--><!--]-->
+    <div style="display: contents"><!--[--><!--[--><!----><div class="mx-auto max-w-6xl p-4"><!----><h1 class="mb-4 text-3xl">Text Sorting Playground</h1> <p class="mb-4"><em>Based on <a href="https://github.com/theodore-s-beers/feruca" rel="noreferrer" target="_blank" class="text-blue-800 hover:underline">feruca</a>, a simple but conformant &amp; performant implementation of the <a href="https://www.unicode.org/reports/tr10/" rel="noreferrer" target="_blank" class="text-blue-800 hover:underline">Unicode Collation Algorithm</a>, written in safe Rust with minimal dependencies. Give it a try some time!</em></p> <div class="mb-4 flex gap-4"><textarea rows="20" placeholder="Enter items to be sorted here, one per line" class="grow rounded border bg-white p-2"></textarea> <textarea rows="20" readonly class="grow rounded border bg-white p-2"></textarea></div> <div class="flex items-center"><button class="mr-4 cursor-pointer rounded bg-blue-700 px-3 py-2 text-white">Sort</button> <button class="mr-4 cursor-pointer rounded bg-gray-600 px-3 py-2 text-white">Clear</button> <div class="mr-2">Sorting approach:</div> <select class="rounded border bg-white p-2"><option value="naive">Naïve</option><option value="uca" selected>UCA default</option><option value="ArabicScript">Arabic first</option><option value="ArabicInterleaved">Arabic interleaved</option></select> <button class="ml-auto cursor-pointer rounded bg-green-800 px-3 py-2 text-white">Copy</button></div><!----><!----></div><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_lfswhk = {
+					__sveltekit_1954ri7 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BSSmZq1D.js"),
-						import("./_app/immutable/entry/app.BYRLsaHu.js")
+						import("./_app/immutable/entry/start.BUv8lF3O.js"),
+						import("./_app/immutable/entry/app.CjiC4d8N.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
