--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
     <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
-		<link href="./_app/immutable/assets/0.DM6NDgye.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DpQeNWwQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DfiMDqM3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BcVFhOEa.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CajmxYk6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.wScB-MYe.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B4Lj2-T9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CE1F3jnU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BxepBHLk.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DSii9DI_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CoC8y2We.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CeiQ557p.js"><!--[--><meta name="description" content="Try sorting text using different approaches—including mixing the Latin and Arabic scripts"> <meta property="og:type" content="website"> <meta property="og:title" content="Text Sorting Playground"> <meta property="og:url" content="https://www.theobeers.com/allsorts/"> <meta property="og:image" content="https://www.theobeers.com/allsorts/og.jpg"> <meta name="twitter:card" content="summary_large_image"> <meta name="twitter:title" content="Text Sorting Playground"><!--]--><title>Text Sorting Playground</title>
+		<link href="./_app/immutable/assets/0.B7Hi3l9A.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.x4Sa88Y6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/YbcKyqSM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B478JZGx.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/eUrJThgc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C6Kgk6Nc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/9HltBvFs.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CwysCz4o.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CsXgPhL2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DHp4q25m.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BqeO_OXU.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.D_OzZ93N.js"><!--[--><meta name="description" content="Try sorting text using different approaches—including mixing the Latin and Arabic scripts"> <meta property="og:type" content="website"> <meta property="og:title" content="Text Sorting Playground"> <meta property="og:url" content="https://www.theobeers.com/allsorts/"> <meta property="og:image" content="https://www.theobeers.com/allsorts/og.jpg"> <meta name="twitter:card" content="summary_large_image"> <meta name="twitter:title" content="Text Sorting Playground"><!--]--><title>Text Sorting Playground</title>
   </head>
   <body data-sveltekit-preload-data="hover" class="bg-gray-50">
     <div style="display: contents"><!--[--><!--[--><!----><div class="mx-auto max-w-4xl p-4"><!----><h1 class="mb-4 text-3xl">Text Sorting Playground</h1> <p class="mb-4 hyphens-auto"><em>Based on <a href="https://github.com/theodore-s-beers/feruca" rel="noreferrer" target="_blank" class="text-blue-800 hover:underline">feruca</a>, a simple but conformant &amp; performant implementation of the <a href="https://www.unicode.org/reports/tr10/" rel="noreferrer" target="_blank" class="text-blue-800 hover:underline">Unicode Collation Algorithm</a>, written in safe Rust with minimal dependencies. Give it a try some time!</em></p> <div class="mb-4 flex flex-col gap-4 md:flex-row"><textarea rows="16" placeholder="Enter items to be sorted here, one per line" class="grow rounded border bg-white p-2"></textarea> <textarea rows="16" readonly class="grow rounded border bg-white p-2"></textarea></div> <div class="flex flex-col gap-4 md:flex-row"><div class="flex gap-4"><button class="cursor-pointer rounded bg-blue-700 px-3 py-2 text-white">Sort</button> <button class="cursor-pointer rounded bg-gray-600 px-3 py-2 text-white">Clear</button></div> <div class="flex items-center gap-2"><label for="approach-select">Sorting approach:</label> <select id="approach-select" class="rounded border bg-white p-2"><option value="naive">Naïve</option><option value="uca" selected>UCA default</option><option value="ArabicScript">Arabic first</option><option value="ArabicInterleaved">Arabic interleaved</option></select></div> <button class="w-16 cursor-pointer rounded bg-green-800 py-2 text-white md:ml-auto">Copy</button></div><!----><!----></div><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_11809jm = {
+					__sveltekit_ipmvr = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DpQeNWwQ.js"),
-						import("./_app/immutable/entry/app.wScB-MYe.js")
+						import("./_app/immutable/entry/start.x4Sa88Y6.js"),
+						import("./_app/immutable/entry/app.C6Kgk6Nc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
